# webserv

./: .gitignore  CMakeLists.txt  CONFIG.md  README.md  client  client.cpp  main.cpp  server  server.cpp
.github/workflows/: build.yml
config/: example.conf
config/default_error_pages/: error400.html  error404.html
include/: Config.hpp  Connection.hpp  FileDescriptor.hpp  Socket.hpp  index.html  parse_headers.hpp  webserv.hpp
lib/cpplog/: CMakeLists.txt
lib/cpplog/include/: cpplog.hpp
src/: Config.cpp  Connection.cpp  FileDescriptor.cpp  Socket.cpp  errorMessage.cpp  hello-world.cpp  main.cpp  parse.cpp
src/default_error_pages/: error400.html  error404.html
src/parse_headers/: parse_headers.cpp  testinput.txt
test/: CMakeLists.txt  test.cpp  test_parse_header.cpp
